--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/iLuvLogix/loggly"
+    "url": "https://github.com/iLuvLogix/logfication"
   },
   "author": "Christoph (iLuvLogix)",
   "license": "MIT",
